added struct for swagger examples in handlers
